# xcat

./: CURRENT_MEMORY.md  Cargo.toml  FAILED_PATHS.md  README.md  agent_xcat_memory_20260405T133541Z.md  agent_xcat_memory_20260405T135454Z.md  agent_xcat_memory_20260405T135815Z.md  agent_xcat_memory_20260405T140653Z.md  agent_xcat_memory_20260405T141228Z.md  agent_xcat_memory_20260405T141553Z.md  agent_xcat_memory_20260405T142023Z.md  agent_xcat_memory_20260405T162558Z.md  config.example.toml  goal.txt  results.tsv  skill_byte_safe_streams.md
docs/: color.md  config.md  performance.md  usage.md  workflows.md
psp/: agent_xcat_memory_20260405T133117Z.md  agent_xcat_memory_20260405T134009Z.md  agent_xcat_memory_20260405T134349Z.md  agent_xcat_memory_20260405T140143Z.md  goal.txt
src/: cli.rs  colorizer.rs  config.rs  display.rs  engine.rs  error.rs  lib.rs  main.rs  reader.rs
tests/: integration_test.rs
